Project

General

Profile

Actions

Bug #39335

closed

deadlock on command completion

Added by Sage Weil about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description


40
        clusterstate::lock
        objecter::rwlock  (blocked)

28
        activepymodules::lock ***
        clusterstate::lock
        objecter::rwlock  (blocked)

27?
                                        osd_command
        objecter::rwlock (blocked)              submit_command

24
        objecter__rwlock (blocked)

13
        objecter::rwlock
                activepymodules::lock (blocked) ... deadlock!


Related issues 3 (0 open3 closed)

Related to mgr - Bug #35985: deadlock in standby ceph-mgr daemonsResolvedBrad Hubbard09/14/2018

Actions
Has duplicate mgr - Bug #39363: deadlock from moncommand completionDuplicateSage Weil04/17/2019

Actions
Copied to mgr - Backport #39397: nautilus: deadlock on command completionResolvedSage WeilActions
Actions #1

Updated by Sage Weil about 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil about 5 years ago

Actions #3

Updated by Sage Weil about 5 years ago

  • Subject changed from deadlock from set_store() to deadlock on command completion
  • Description updated (diff)
Actions #4

Updated by Sage Weil about 5 years ago

  • Description updated (diff)
Actions #5

Updated by Sage Weil about 5 years ago

Actions #6

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39397: nautilus: deadlock on command completion added
Actions #8

Updated by Sebastian Wagner almost 5 years ago

  • Has duplicate Bug #39363: deadlock from moncommand completion added
Actions #9

Updated by Sebastian Wagner almost 5 years ago

  • Related to Bug #35985: deadlock in standby ceph-mgr daemons added
Actions #10

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF