mgr/ActivePyModules: drop GIL while we wait for mon reply in set_store

Fixes: http://tracker.ceph.com/issues/39335
Fixes: http://tracker.ceph.com/issues/39040
Signed-off-by: Sage Weil <sage@redhat.com>